--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,9 @@ typings/
 # dotenv environment variables file
 .env
 
+# ignore package-lock.json
+package-lock.json
+
+# ignore default reports
+reportLicenses.json
+reportLicenses.txt
