--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "bugs": {
     "url": "https://github.com/marcelwinh/license-crawler/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/marcelwinh/license-crawler.git"
+  },
   "license": "MIT",
   "devDependencies": {
     "@types/node": "9.6.6",
