--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "module": "commonjs",
         "target": "es5",
         "sourceMap": true,
+        "declaration": true,
         "moduleResolution": "node",
         "experimentalDecorators": true,
         "allowJs": true
