--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "license-crawler",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "crawls a npm package and it's dependencies for their licenses",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,14 @@
     "type": "git",
     "url": "https://github.com/marcelwinh/license-crawler.git"
   },
+  "keywords":[
+    "license",
+    "crawler",
+    "checker",
+    "legal",
+    "dependency",
+    "package"
+  ],
   "license": "MIT",
   "devDependencies": {
     "@types/node": "9.6.6",
